fixed top vertical alignment

--- a/Vaesen/vaesen_sheet.css
+++ b/Vaesen/vaesen_sheet.css
@@ -427,7 +427,6 @@
     padding: 14px;
     position: relative;
     z-index: 1;
-    margin: 10px;
     border-radius: 9px 0 9px 0;
     background: rgb(0 0 0 / 7%);
     margin-bottom: 10px;
